added 'about' section, gallery with modal windows, implemented yandex map

--- a/source/includes/main.liquid
+++ b/source/includes/main.liquid
@@ -9,6 +9,7 @@ text:
         <meta name="viewport" content="width:device-width, initial-scale=1.0" />
         <title>{{ title }}</title>
         <link rel="stylesheet" href="/css/styles.css" />
+        <script src="https://api-maps.yandex.ru/2.1/?apikey=2151b5c4-c2da-4d3e-b579-eb25fd32aa6b&lang=ru_RU" type="text/javascript"></script>
     </head>
     <body class="min-h-screen flex flex-col">
 
