--- a/tailwind.css
+++ b/tailwind.css
@@ -2,6 +2,98 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/*=============================================*/
+
+#myImg1, #myImg2, #myImg3, #myImg4 {
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg1:hover, #myImg2:hover, #myImg3:hover, #myImg4:hover  {opacity: 0.7;}
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 11; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.9); 
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
+
+/*=============================================*/
+
+.galleryPic{
+  max-height: 20%;
+  max-width: 20%;
+  margin-right: 20px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ul li:before {
+  content: '-';
+  font-size: xx-large;
+  color: red;
+}
+
 .stageNumberBorder{
   border: 4px solid skyblue;
   border-image: linear-gradient(to right top, white, red);
