added maininfo division, politics page and other stuff

--- a/source/includes/partials/footer/footer.liquid
+++ b/source/includes/partials/footer/footer.liquid
@@ -1,4 +1,4 @@
 <footer class="w-full mb-4 flex justify-around mt-auto">
     <h4 class="text-gray-800 font-bold">{{ footerLeftSign }}</h4>
-    <h4>{{ footerRightSign }}</h4>
+    <a href="/politics">{{ footerRightSign }}</a>
 </footer>
