--- a/source/includes/partials/header/header.liquid
+++ b/source/includes/partials/header/header.liquid
@@ -4,7 +4,7 @@
 <!-- ======================================== vvvvvvvvvvvvvvvv ======================================== -->
 
     <div class="h-2/3 flex justify-evenly items-center">
-        <img src="{{ headerImageUrl }}" width="200" height="100"/>
+        <a href="/"><img src="{{ headerImageUrl }}" width="200" height="100"/></a>
         <div>
             <p class="font-semibold">{{ headerWorkingTime }}</p>
             <p class="font-semibold">{{ headerAddress }}</p>
@@ -15,6 +15,8 @@
         </div>
         <button class="bg-red-600 w-64 h-1/2 text-white font-bold hover:bg-red-800">{{ headerOrderCallButtonText }}</button>
     </div>
+
+    {{ test228 }}
 
 <!-- ======================================== ^^^^^^^^^^^^^^^^ ======================================== -->
 
