--- a/source/includes/content/content.liquid
+++ b/source/includes/content/content.liquid
@@ -1,12 +1,16 @@
-<div class="grid grid-cols-2 gap-10  w-4/5 min-h-screen mx-auto mt-5">
-    
+{% include './mainInfo' %}
+
+{% include './partials/signs/sectionSign' %}
+
+<div class="grid grid-cols-2 gap-5 col-gap-0 w-4/5 min-h-screen mx-auto mt-5">
     {% assign imagesArr = contentImagesArr | split: '( ^v^), '%}
     {% assign descriptionsArr = contentDescArr | split: '( ^v^), '%}
     {% assign stageNamesArr = contentStageNameArr | split: '( ^v^), '%}
-    {% for linkTitle in linksTitlesArr %}
+    
+    {% for stage in stageNamesArr %}
         {% assign position = forloop.index0 %}
-        
-        <div class="w-auto h-40 flex border-solid border-4 border-gray-200 relative overflow-hidden">
+
+        <div class="w-auto h-48 flex border-solid border-4 border-gray-200 relative overflow-hidden">
             <img src="assets/img/pic{{ position | plus: 1 }}.jpg" class="z-0 absolute" />
             <div class="bg-white h-full w-full z-10 absolute left-52 flex flex-col" id="workStagesContent">
                 <h4 class="w-1/2 h-2/3 pl-10 font-semibold text-center pt-5 leading-none" id="workStagesCardContentStageDesc">{{ descriptionsArr[position] }}</h4>
@@ -26,5 +30,3 @@
 {% include './aboutUs' %}
 
 {% include './gallery' %}
-
-{% include './partials/map/map' %}
