--- a/source/includes/content/gallery.liquid
+++ b/source/includes/content/gallery.liquid
@@ -6,34 +6,23 @@
         <img id="myImg4" class="galleryPic" src="assets/img/pic4.jpg" onmousedown="handleClick(id)">
     </div>
 
-    <!-- The Modal -->
     <div id="myModal" class="modal">
-    
-      <!-- The Close Button -->
       <span class="close">&times;</span>
-    
-      <!-- Modal Content (The Image) -->
       <img class="modal-content" id="img01">
-    
     </div>
 
     <script>
-
-        function handleClick(imageId){
+        function handleClick(imageId)
+        {
             var modal = document.getElementById("myModal");
-
-            // Get the image and insert it inside the modal - use its "alt" text as a caption
             var img = document.getElementById(imageId);
             var modalImg = document.getElementById("img01");
-            img.onclick = function(){
+            img.onclick = function()
+            {
                 modal.style.display = "block";
                 modalImg.src = this.src;
             }
-
-            // Get the <span> element that closes the modal
             var span = document.getElementsByClassName("close")[0];
-
-            // When the user clicks on <span> (x), close the modal
             span.onclick = function() { modal.style.display = "none"; }
             document.addEventListener('keydown', (event) => {
                 const keyCode = event.keyCode;
@@ -41,6 +30,5 @@
             }
             )
         }
-
     </script>
 </div>
