--- a/source/includes/main.liquid
+++ b/source/includes/main.liquid
@@ -1,5 +1,16 @@
 ---
-text: 
+headerImageUrl: "https://memepedia.ru/wp-content/uploads/2018/08/serious_cat.jpg"
+headerWorkingTime:  Пн-Пт 8:00-17:00
+headerAddress: Павловский район, с. Б.Давыдово, ул.Заводская, 2а
+headerFirstPhoneNumber: 88317120706-ПК ДК
+headerSecondPhoneNumber: 89306655111-ДК лазер
+headerOrderCallButtonText: Заказать звонок
+
+headerLinksTitles: Главная( ^v^), Услуги( ^v^), Запрос на расчёт( ^v^), Работа с регионами( ^v^), Новости( ^v^), Контакты
+headerLinksUrls: /( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com
+
+footerLeftSign: ООО "тУт НаЗвАнИе ФиРмЫ". Все права защищены. (с) 2022
+footerRightSign: Политика конфиденциальности
 ---
 
 <!DOCTYPE html>
@@ -15,9 +26,9 @@ text:
 
         {% include './partials/header/header' %}
 
-        {% include './partials/signs/sectionSign' %}
-
-        {% include './content/content' %}
+        {% block content %}
+            {{ content }}
+        {% endblock %}       
 
         {% include './partials/footer/footer' %}
 
