added logo, remade some other stuff

--- a/source/includes/main.liquid
+++ b/source/includes/main.liquid
@@ -1,5 +1,5 @@
 ---
-headerImageUrl: "https://memepedia.ru/wp-content/uploads/2018/08/serious_cat.jpg"
+headerImageUrl: ./assets/img/logo.png
 headerWorkingTime:  Пн-Пт 8:00-17:00
 headerAddress: Павловский район, с. Б.Давыдово, ул.Заводская, 2а
 headerFirstPhoneNumber: 88317120706-ПК ДК
@@ -9,7 +9,7 @@ headerOrderCallButtonText: Заказать звонок
 headerLinksTitles: Главная( ^v^), Услуги( ^v^), Запрос на расчёт( ^v^), Работа с регионами( ^v^), Новости( ^v^), Контакты
 headerLinksUrls: /( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com
 
-footerLeftSign: ООО "тУт НаЗвАнИе ФиРмЫ". Все права защищены. (с) 2022
+footerLeftSign: ООО "Движение Качества". Все права защищены. (с) 2022
 footerRightSign: Политика конфиденциальности
 ---
 
