--- a/source/includes/partials/header/header.liquid
+++ b/source/includes/partials/header/header.liquid
@@ -1,10 +1,10 @@
-<header class="bg-white h-36 w-full">
+<header class="bg-white h-36 w-full flex-col content-between">
 
 <!-- ======================================== Header Main Info ======================================== -->
 <!-- ======================================== vvvvvvvvvvvvvvvv ======================================== -->
 
-    <div class="h-2/3 flex justify-evenly items-center">
-        <a href="/"><img src="{{ headerImageUrl }}" width="200" height="100"/></a>
+    <div class="h-2/3 flex justify-evenly items-center ">
+        <a href="/" class="w-1/5 h-full"><img src="{{ headerImageUrl }}" class="object-contain h-full w-full"/></a>
         <div>
             <p class="font-semibold">{{ headerWorkingTime }}</p>
             <p class="font-semibold">{{ headerAddress }}</p>
@@ -16,14 +16,12 @@
         <button class="bg-red-600 w-64 h-1/2 text-white font-bold hover:bg-red-800">{{ headerOrderCallButtonText }}</button>
     </div>
 
-    {{ test228 }}
-
 <!-- ======================================== ^^^^^^^^^^^^^^^^ ======================================== -->
 
 <!-- ======================================== Header Navbar ======================================== -->
 <!-- ======================================== vvvvvvvvvvvvv ======================================== -->
 
-    <div class="navBarLinks drop-shadow-lg font-semibold text-black">
+    <div class="navBarLinks w-1/3 drop-shadow-lg font-semibold text-black flex">
         
         {% assign linksTitlesArr = headerLinksTitles | split: '( ^v^), '%}
         {% assign linksUrlsArr = headerLinksUrls | split: '( ^v^), '%}
