--- a/tailwind.css
+++ b/tailwind.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
+#logoImg {
+	object-fit: fill;
+}
+
 .mainInfoBlock{
   width: 100%;
   height: 80vh;
@@ -123,17 +127,14 @@ div#workStagesContent{
 
 .navBarLinks{
   position: relative;
-
   border-right: 4px solid red;
-  background-color: aqua;
-  height: 7%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  height: 40%;
   width: 95%;
   box-shadow: black;
-
-  position: absolute;
+  
   left: -30px;
 
   transform: skew(-35deg);
