--- a/source/includes/main.liquid
+++ b/source/includes/main.liquid
@@ -1,5 +1,5 @@
 ---
-headerImageUrl: ./assets/img/logo.png
+headerImageUrl: ../assets/img/logo.jpg
 headerWorkingTime:  Пн-Пт 8:00-17:00
 headerAddress: Павловский район, с. Б.Давыдово, ул.Заводская, 2а
 headerFirstPhoneNumber: 88317120706-ПК ДК
@@ -7,7 +7,7 @@ headerSecondPhoneNumber: 89306655111-ДК лазер
 headerOrderCallButtonText: Заказать звонок
 
 headerLinksTitles: Главная( ^v^), Услуги( ^v^), Запрос на расчёт( ^v^), Работа с регионами( ^v^), Новости( ^v^), Контакты
-headerLinksUrls: /( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com
+headerLinksUrls: /( ^v^), /servicesPage( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com
 
 footerLeftSign: ООО "Движение Качества". Все права защищены. (с) 2022
 footerRightSign: Политика конфиденциальности
