--- a/source/includes/main.liquid
+++ b/source/includes/main.liquid
@@ -7,7 +7,7 @@ headerSecondPhoneNumber: 89306655111-ДК лазер
 headerOrderCallButtonText: Заказать звонок
 
 headerLinksTitles: Главная( ^v^), Услуги( ^v^), Запрос на расчёт( ^v^), Работа с регионами( ^v^), Новости( ^v^), Контакты
-headerLinksUrls: /( ^v^), /servicesPage( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com
+headerLinksUrls: /( ^v^), /servicesPage( ^v^), /request( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com
 
 footerLeftSign: ООО "Движение Качества". Все права защищены. (с) 2022
 footerRightSign: Политика конфиденциальности
