Remade site according to new six updates by customer

--- a/source/includes/main.liquid
+++ b/source/includes/main.liquid
@@ -6,8 +6,8 @@ headerFirstPhoneNumber: 88317120706-ПК ДК
 headerSecondPhoneNumber: 89306655111-ДК лазер
 headerOrderCallButtonText: Заказать звонок
 
-headerLinksTitles: Главная( ^v^), Услуги( ^v^), Запрос на расчёт( ^v^), Работа с регионами( ^v^), Новости( ^v^), Контакты
-headerLinksUrls: /( ^v^), /servicesPage( ^v^), /request( ^v^), https://www.google.com( ^v^), https://www.google.com( ^v^), https://www.google.com
+headerLinksTitles: Главная( ^v^), О Нас( ^v^), Контакты
+headerLinksUrls: /( ^v^), /aboutUs( ^v^), /contacts
 
 footerLeftSign: ООО "Движение Качества". Все права защищены. (с) 2022
 footerRightSign: Политика конфиденциальности
