Added refs to videos

--- a/source/includes/index.liquid
+++ b/source/includes/index.liquid
@@ -1,7 +1,7 @@
 ---
 layout: main.liquid
 
-mainInfoTitle: ПРОЕКТИРОВАНИЕ И ПРОИЗВОДСТВО МЕТАЛЛОИЗДЕЛИЙ
+mainInfoTitle: Производственная Компания «Движение Качества»
 
 mainInfoDescription: Предприятие «ЛАЗЕР - НН» предлагает клиентам профессиональное изготовление металлоконструкций для промышленного использования и по индивидуальному заказу, весь спектр услуг по обработке металла, выполнение высокоточной резки металла с помощью лазера.
 
