--- a/source/includes/partials/header/header.liquid
+++ b/source/includes/partials/header/header.liquid
@@ -3,7 +3,7 @@
 <!-- ======================================== Header Main Info ======================================== -->
 <!-- ======================================== vvvvvvvvvvvvvvvv ======================================== -->
 
-    <div class="h-2/3 flex justify-evenly items-center ">
+    <div class="h-full flex justify-evenly items-center ">
         <a href="/" class="w-1/5 h-full"><img src="{{ headerImageUrl }}" class="object-contain h-full"/></a>
         <div>
             <p class="font-semibold">{{ headerWorkingTime }}</p>
