--- a/source/includes/politics.liquid
+++ b/source/includes/politics.liquid
@@ -3,7 +3,7 @@ layout: main.liquid
 title: Политика конфиденциальности
 ---
 
-<main class="px-20 text-xl leading-tight my-5">
+<main class="px-20 text-xl leading-tight mt-16">
     <h1 class="my-2 text-3xl font-bold text-gray-700">{{ title | upcase }}</h1>
     {{ content }}
 </main>
