--- a/source/includes/content/content.liquid
+++ b/source/includes/content/content.liquid
@@ -10,10 +10,10 @@
     {% for stage in stageNamesArr %}
         {% assign position = forloop.index0 %}
 
-        <div class="w-auto h-48 flex border-solid border-4 border-gray-200 relative overflow-hidden">
+        <a class="w-auto h-48 flex border-solid border-4 border-gray-200 relative overflow-hidden" href="/video1" id="ckskd">
             <img src="assets/img/pic{{ position | plus: 1 }}.jpg" class="z-0 absolute" />
             <div class="bg-white h-full w-full z-10 absolute left-52 flex flex-col" id="workStagesContent">
-                <h4 class="w-1/2 h-2/3 pl-10 font-semibold text-center pt-5 leading-none" id="workStagesCardContentStageDesc">{{ descriptionsArr[position] }}</h4>
+                <h4 class="w-1/2 h-2/3 pl-10 font-semibold text-center pt-2 leading-none text-xs" id="workStagesCardContentStageDesc">{{ descriptionsArr[position] }}</h4>
                 <div class="w-3/5 h-1/3 flex mt-auto items-end">
                     <div class="w-1/3 h-full stageNumberBorder">
                         <h1 class="text-red-600 text-4xl text-center font-bold" id="workStagesContentStageName">{{ position | plus: 1 | prepend: "0" }}</h1>
@@ -21,7 +21,7 @@
                     <h1 class="text-red-600 text-xl mb-4 ml-5 font-semibold leading-none text-center" id="workStagesContentStageName">{{ stageNamesArr[position] }}</h1>
                 </div>
             </div>
-        </div>
+        </a>
 
     {% endfor %}
 
