--- a/source/includes/servicesPage.liquid
+++ b/source/includes/servicesPage.liquid
@@ -3,7 +3,24 @@ layout: main.liquid
 title: Услуги
 ---
 
-<div class="w-full min-h-screen flex flex-col items-center justify-center">
-    <h1 class="text-6xl">{{ title }}</h1>
-    <h2 class="text-3xl mt-5">{{ content }}</h2>
+<div class="w-full min-h-screen flex flex-col items-center mt-16">
+    
+    {% assign descriptionsArr = contentDescArr | split: '( ^v^), '%}
+    {% assign stageNamesArr = contentStageNameArr | split: '( ^v^), '%}
+
+    {% for stage in stageNamesArr %}
+        {% assign position = forloop.index0 %}
+
+    <div class="w-2/3 h-72 border-solid border-2 border-red-600 flex mt-5">
+        <div class="w-3/5 h-full flex flex-col p-5">
+            <span class="text-3xl font-bold">{{ stageNamesArr[position] | upcase }}</span>
+            <p class="mt-3">{{ descriptionsArr[position] }}</p>
+        </div>
+        <div class="w-2/5 h-full bg-blue-900 flex justify-center items-center">
+            <span class="text-5xl font-bold">ВИДЕО</span>
+        </div>
+    </div>
+
+    {% endfor %}
+
 </div>
