--- a/source/includes/content/mainInfo.liquid
+++ b/source/includes/content/mainInfo.liquid
@@ -1,6 +1,6 @@
-<div style="background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(assets/img/picMainInfo.jpg) center;" class="mainInfoBlock p-14 flex-col">
-    <h1 class="w-3/5 h-auto text-4xl font-semibold">{{ mainInfoTitle | upcase }}</h1>
-    <div class="flex justify-between mt-10">
+<div style="background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(assets/img/picMainInfo.jpg) center;" class="mainInfoBlock flex flex-col min-h-screen justify-between p-10">
+    <h1 class="w-3/5 h-auto text-4xl font-semibold pt-5">{{ mainInfoTitle | upcase }}</h1>
+    <div class="flex justify-between h-auto">
         <p class="w-1/3 h-full self-end">{{ mainInfoDescription }}</p>
 
         <div class="pr-10 w-1/3">
@@ -19,4 +19,4 @@
         </div>
 
     </div>
-</div>
+  </div>
