Added two stage cards and mainInfo text got changed

--- a/source/includes/index.liquid
+++ b/source/includes/index.liquid
@@ -3,8 +3,8 @@ layout: main.liquid
 
 mainInfoTitle: Производственная Компания «Движение Качества»
 
-mainInfoDescription: Предприятие «ЛАЗЕР - НН» предлагает клиентам профессиональное изготовление металлоконструкций для промышленного использования и по индивидуальному заказу, весь спектр услуг по обработке металла, выполнение высокоточной резки металла с помощью лазера.
-stagesDescriptionSign: Нередко в зависимости от конкретной цели дальнейшего применения требуются металлические детали нестандартных размеров или конфигурации. Выходом из данной ситуации становится механическая обработка металла по индивидуальным чертежам заказчика. Специалисты всегда готовы быстро и качественно выполнить свою работу в соответствии со всеми пожеланиями и требованиями клиента.
+mainInfoDescription: Нередко в зависимости от конкретной цели дальнейшего применения требуются металлические детали нестандартных размеров или конфигурации. Выходом из данной ситуации становится механическая обработка металла по индивидуальным чертежам заказчика. Специалисты всегда готовы быстро и качественно выполнить свою работу в соответствии со всеми пожеланиями и требованиями клиента.
+
 
 mainInfoAdvatageHeaders: МОЩНОСТЬ ПРОИЗВОДСТВА, ПРОИЗВОДСТВО ПОЛНОГО ЦИКЛА, УДЕРЖИВАЕМ ЦЕНЫ ТЕКУЩЕГО ГОДА!
 mainInfoAdvantageDescriptions: 400 тонн готовых изделий в месяц( ^v^), Реализуем вашу идею и изготовим изделие из металла точно в срок( ^v^), Для получения скидки отправьте заявку прямо сейчас
