--- a/source/includes/content/mainInfo.liquid
+++ b/source/includes/content/mainInfo.liquid
@@ -1,22 +1,26 @@
 <div style="background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(assets/img/picMainInfo.jpg) center;" class="mainInfoBlock flex flex-col justify-between p-10">
-    <h1 class="w-3/5 h-auto text-4xl font-semibold pt-5">{{ mainInfoTitle | upcase }}</h1>
-    <div class="flex justify-between h-auto">
-        <p class="w-1/3 h-full self-end">{{ mainInfoDescription }}</p>
+  <h1 class="w-3/5 h-auto text-4xl font-semibold pt-5">{{ mainInfoTitle | upcase }}
+  </h1>
+  <div class="flex justify-between h-auto">
+    <p class="w-1/2 h-full self-end">{{ mainInfoDescription }}
+    </p>
 
-        <div class="pr-10 w-1/3">
-            {% assign headersArr = mainInfoAdvatageHeaders | split: ', '%}
-            {% assign descriptionsArr = mainInfoAdvantageDescriptions | split: '( ^v^), '%}
-            {% for advantage in headersArr %}
-            {% assign position = forloop.index0 %}
+    <div class="pr-10 w-1/3">
+      {% assign headersArr = mainInfoAdvatageHeaders | split: ', '%}
+      {% assign descriptionsArr = mainInfoAdvantageDescriptions | split: '( ^v^), '%}
+      {% for advantage in headersArr %}
+        {% assign position = forloop.index0 %}
 
 
-            <div class="mb-5">
-                <h1 class="font-bold">{{ headersArr[position] | upcase }}</h1>
-                <p class="pl-4">{{ descriptionsArr[position] }}</p>
-            </div>
-
-        {% endfor %}
+        <div class="mb-5">
+          <h1 class="font-bold">{{ headersArr[position] | upcase }}
+          </h1>
+          <p class="pl-4">{{ descriptionsArr[position] }}
+          </p>
         </div>
 
+      {% endfor %}
     </div>
+
   </div>
+</div>
