--- a/source/includes/content/mainInfo.liquid
+++ b/source/includes/content/mainInfo.liquid
@@ -1,8 +1,8 @@
 <div style="background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(assets/img/picMainInfo.jpg) center;" class="mainInfoBlock flex flex-col justify-between p-10">
-  <h1 class="w-3/5 h-auto text-4xl font-semibold pt-5">{{ mainInfoTitle | upcase }}
-  </h1>
+  <h1 class="w-full h-auto text-4xl text-center font-semibold pt-5">{{ mainInfoTitle | upcase }}</h1>
+  <h2 class="w-full h-auto text-3xl text-center font-semibold">{{ mainInfoSubTitle | upcase }}</h2>
   <div class="flex justify-between h-auto">
-    <p class="w-1/2 h-full self-end">{{ mainInfoDescription }}
+    <p class="w-1/2 h-full self-end text-xl">{{ mainInfoDescription }}
     </p>
 
     <div class="pr-10 w-1/3">
