--- a/source/includes/index.liquid
+++ b/source/includes/index.liquid
@@ -2,12 +2,13 @@
 layout: main.liquid
 
 mainInfoTitle: Производственная Компания «Движение Качества»
+mainInfoSubTitle: Двигайтесь с нами!
 
 mainInfoDescription: Нередко в зависимости от конкретной цели дальнейшего применения требуются металлические детали нестандартных размеров или конфигурации. Выходом из данной ситуации становится механическая обработка металла по индивидуальным чертежам заказчика. Специалисты всегда готовы быстро и качественно выполнить свою работу в соответствии со всеми пожеланиями и требованиями клиента.
 
 
-mainInfoAdvatageHeaders: МОЩНОСТЬ ПРОИЗВОДСТВА, ПРОИЗВОДСТВО ПОЛНОГО ЦИКЛА, УДЕРЖИВАЕМ ЦЕНЫ ТЕКУЩЕГО ГОДА!
-mainInfoAdvantageDescriptions: 400 тонн готовых изделий в месяц( ^v^), Реализуем вашу идею и изготовим изделие из металла точно в срок( ^v^), Для получения скидки отправьте заявку прямо сейчас
+mainInfoAdvatageHeaders: МОЩНОСТЬ ПРОИЗВОДСТВА, ПРОИЗВОДСТВО ПОЛНОГО ЦИКЛА, С НАМИ УДОБНО
+mainInfoAdvantageDescriptions: Более 5000 единиц изделий в месяц( ^v^), Разработаем чертёж и изготовим изделие согласно технической документации( ^v^), Гибкие цены и сроки поставки. Ваши условия - наш приоритет.
 ---
 
 {% include './content/content' %}
