--- a/source/includes/partials/header/header.liquid
+++ b/source/includes/partials/header/header.liquid
@@ -1,39 +1,40 @@
 <header class="bg-white h-36 w-full flex-col content-between">
 
-<!-- ======================================== Header Main Info ======================================== -->
-<!-- ======================================== vvvvvvvvvvvvvvvv ======================================== -->
+  <!-- ======================================== Header Main Info ======================================== -->
+  <!-- ======================================== vvvvvvvvvvvvvvvv ======================================== -->
 
-    <div class="h-full flex justify-around items-center ">
-        <a href="/" class="h-full"><img src="{{ headerImageUrl }}" class="object-contain h-full"/></a>
-        <div>
-            <p class="font-semibold">{{ headerWorkingTime }}</p>
-            <p class="font-semibold">{{ headerAddress }}</p>
-        </div>
-        <div class="h-full w-1/6 flex justify-center items-center">
-            ТУТ ПАРТНЁРЫ
-        </div>        
-        <div class="flex-col">
-            <h4 class="font-semibold text-xl">{{ headerFirstPhoneNumber }}</h4>
-            <h4 class="font-semibold text-xl">{{ headerSecondPhoneNumber }}</h4>
-        </div>
-        <button class="bg-red-600 w-64 h-2/3 text-white font-bold hover:bg-red-800">{{ headerOrderCallButtonText }}</button>
+    <div class="h-full flex justify-around items-center "> <a href="/" class="h-full"><img src="{{ headerImageUrl }}" class="object-contain h-full"/></a>
+    <div>
+      <p class="font-semibold">{{ headerWorkingTime }}</p>
+      <p class="font-semibold">{{ headerAddress }}</p>
     </div>
-
-<!-- ======================================== ^^^^^^^^^^^^^^^^ ======================================== -->
-
-<!-- ======================================== Header Navbar ======================================== -->
-<!-- ======================================== vvvvvvvvvvvvv ======================================== -->
-
-    <div class="navBarLinks w-1/3 drop-shadow-lg font-semibold text-xl text-black flex">
-        
-        {% assign linksTitlesArr = headerLinksTitles | split: '( ^v^), '%}
-        {% assign linksUrlsArr = headerLinksUrls | split: '( ^v^), '%}
-        {% for linkTitle in linksTitlesArr %}
-                {% assign position = forloop.index0 %}
-                <a id="navLinks" href="{{ linksUrlsArr[position] }}">{{ linkTitle }}</a>
-        {% endfor %}
-
+    <div class="h-full w-1/6 flex flex-col justify-center items-center ">
+      <div class="flex justify-between">
+        <img src="../assets/img/GAZ.png" width="60px" height="60px"/>
+        <img src="../assets/img/PAZ.png" width="60px" height="60px"/>
+      </div>
+      <img src="../assets/img/VIC.png" width="100px" height="100px"/>
     </div>
+    <div class="flex-col">
+      <h4 class="font-semibold text-xl">{{ headerFirstPhoneNumber }}</h4>
+      <h4 class="font-semibold text-xl">{{ headerSecondPhoneNumber }}</h4>
+    </div>
+    <button class="bg-red-600 w-64 h-2/3 text-white font-bold hover:bg-red-800">{{ headerOrderCallButtonText }}</button>
+  </div>
 
-<!-- ======================================== ^^^^^^^^^^^^^ ======================================== -->    
+  <!-- ======================================== ^^^^^^^^^^^^^^^^ ======================================== -->
+
+  <!-- ======================================== Header Navbar ======================================== -->
+  <!-- ======================================== vvvvvvvvvvvvv ======================================== -->
+
+    <div class="navBarLinks w-1/3 drop-shadow-lg font-semibold text-xl text-black flex"> {% assign linksTitlesArr = headerLinksTitles | split: '( ^v^), '%}
+    {% assign linksUrlsArr = headerLinksUrls | split: '( ^v^), '%}
+    {% for linkTitle in linksTitlesArr %}
+      {% assign position = forloop.index0 %}
+      <a id="navLinks" href="{{ linksUrlsArr[position] }}">{{ linkTitle }}</a>
+    {% endfor %}
+
+  </div>
+
+  <!-- ======================================== ^^^^^^^^^^^^^ ======================================== -->
 </header>
